--- a/article.html
+++ b/article.html
@@ -17,10 +17,10 @@
 <body>
   <header>
     <nav class="flex container header__nav">
-      <div class="flex header__logo-wrapper">
+      <a href="index.html" class="flex header__logo-wrapper">
         <img src="images/icon.png" alt="" class="header__icon">
-        <span class="header__logo-text bold text-s"><a href="index.html">My learning journal</a></span>
-      </div>
+        <span class="header__logo-text bold text-s">My learning journal</span>
+      </a>
       <div>
         <ul class="flex header__list">
           <li><a href="index.html" class="header__link text-s">Home</a></li>
