--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
   </main>
   <footer class="flex text-s">
     <p class="footer__name bold">My learning Journal</p>
-    <p class="footer__cr">Copyright ©2025</p>
+    <p class="footer__cr" id="footer-cr"></p>
   </footer>
+  <script src="script.js" type="module"></script>
 </body>
 </html>
