feat: persoanlize about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -31,9 +31,9 @@
   </header>
   <main class="container">
     <section class="hero">
-      <img src="images/porfile-pic.png" alt="A man smiling." class="hero__profile-pic">
+      <img src="images/profile-pic.jpg" alt="A man smiling." class="hero__profile-pic">
       <div>
-        <h1 class="bold hero__title text-l">Hi there! My name is Roku and welcome to my learning journal.</h1>
+        <h1 class="bold hero__title text-l">Hi there! My name is Phillip and welcome to my learning journal.</h1>
         <p class="hero__text text-s">
           After several months of learning in the Frontend Developer Career Path, I've made the big jump over to the Bootcamp to get expert code reviews of my Solo Projects projects and meet like-minded peers.
         </p>
